Revert last 3 commits including merge of #488
Tests are still failing on windows